# BeBOT

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bebotenv.yml  constants.py  format.sh
.github/workflows/: cmake.yml
Examples/: 1000_veh_sequential.html  101_veh_sequential.pickle  2_1Examples  2_1Examples.py  2_2Examples.py  3D_CAS_101veh_optimal.py  3D_CAS_101veh_sequential.py  3D_HawksLogo_1000veh_sequential.py  3_5Examples.py  AirTrafficControl.py  AirTrafficControlSpatial.py  BernsteinProperties.py  ClutteredEnvironment.py  DubinsCarTimeOptimal.py  GroupedHawksLogo_1000pts.csv  HawksLogoSequentialNew.py  SequentialSwarm.py  SetMatplotlibParamsForPaper.py  utils.py
Examples/ATCSpatial_Figures/: Distance_Constraints.eps  Flight_Trajectories.eps  Speed_Constraints.eps
Examples/pytest/: ConvexHull.py  EndPoint.py  test_ConvexHull.py  test_EndPoint.py
Tests/: BernsteinTests.py  HeadingAngleCheck.py  SequentialPlanning.py  SpeedSquaredCheck.py  TrueMinimum.py  test_ConvexHull.py  test_EndPoint.py
apps/: CMakeLists.txt  main.cpp
bebot/: CMakeLists.txt
bebot/apps/: main.cpp
bebot/include/bebot/: bebot.hpp
bebot/src/: bebot.cpp
docker/: docker-compose.yml  dockerfile
include/bebot/: algorithm.hpp  bebot.hpp  bernstein.hpp
optimization/: AngularRate.py  ObstacleAvoidance.py  SpatialSeparation.py  Speed.py  TemporalSeparation.py
polynomial/: base.py  bernstein.py  rationalbernstein.py
python/: bebotenv.yml  gjk.py
python/Examples/: 2_1Examples.py  2_2Examples.py  3D_CAS_101veh_sequential.py  3D_HawksLogo_1000veh_sequential.py  3_5Examples.py  AirTrafficControlSpatial.py  CAS_PixelImage.csv  ClutteredEnvironment.py  DubinsCarTimeOptimal.py  HawksLogo_1000pts.csv  SetMatplotlibParamsForPaper.py
python/Examples/ATCSpatial_Figures/: Angular_Velocity_Constraints.eps
python/Tests/: TrueMinimum.py
python/optimization/: AngularRate.py
python/polynomial/: bernstein.py  rationalbernstein.py
src/: CMakeLists.txt  bebot.cpp  bebot.hpp  common.cpp  common.hpp
src/motion_planning/: CMakeLists.txt
src/polynomials/: CMakeLists.txt
src/polynomials/algorithms/: CMakeLists.txt  algorithm.cpp
src/polynomials/primitives/: CMakeLists.txt  bernstein.cpp  bernstein_helpers.cpp  bernstein_helpers.hpp
tests/: CMakeLists.txt  bernstein_test.cpp
